# ChangeLog for gnome-extra/gnome-mag
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-mag/ChangeLog,v 1.13 2004/03/13 16:47:10 foser Exp $

  13 Mar 2004; foser <foser@gentoo.org> metadata.xml :
  Maintainership to gnome-accessibility herd

*gnome-mag-0.10.8 (10 Mar 2004)

  10 Mar 2004; L. Boshell <leonardop@gentoo.org> gnome-mag-0.10.8.ebuild:
  New release.
  
*gnome-mag-0.10.6 (11 Feb 2004)

  11 Feb 2004; L. Boshell <leonardop@gentoo.org> gnome-mag-0.10.6.ebuild:
  New release.
  
  10 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org> gnome-mag-0.10.4.ebuild:
  set ppc in keywords

  06 Feb 2004; Luca Barbato <lu_zero@gentoo.org> gnome-mag-0.10.4.ebuild:
  Marked ~ppc as requested by Spider

  01 Feb 2004; Jon Portnoy <avenj@gentoo.org> gnome-mad-0.10.4.ebuild :
  AMD64 keywords.

  28 Jan 2004; Aron Griffis <agriffis@gentoo.org> gnome-mag-0.10.4.ebuild:
  stable on alpha and ia64

  18 Jan 2004; <gustavoz@gentoo.org> gnome-mag-0.10.4.ebuild:
  stable on hppa and sparc

  14 Jan 2004; Mike Gardiner <obz@gentoo.org> gnome-mag-0.10.4.ebuild:
  Stable on x86 as part of GNOME-2.4.1

  07 Jan 2004; <gustavoz@gentoo.org> gnome-mag-0.10.4.ebuild:
  keyworded ~sparc

*gnome-mag-0.10.4 (14 Dec 2003)

  14 Dec 2003; foser <foser@gentoo.org> gnome-mag-0.10.4.ebuild :
  New release, trivial fixes 

  10 Nov 2003; L. Boshell <leonardop@gentoo.org> gnome-mag-0.10.3.ebuild :
  Marking as x86-stable.
  
*gnome-mag-0.10.3 (10 Oct 2003)

  10 Oct 2003; L. Boshell <leonardop@gentoo.org> gnome-mag-0.10.3.ebuild :
  Initial import.