@@ -1,10 +1,12 @@
-MD5 470c98d3b638bb96d24cd9d3813a3ff2 gnome-mag-0.10.4.ebuild 733
-MD5 77f616b4520ddee30cfe893f500b9211 gnome-mag-0.10.6.ebuild 763
-MD5 9cdbe8658dd637c6b977dbdf0d370d3d gnome-mag-0.10.8.ebuild 782
-MD5 d7e099f17ef686a9b6f7f7ea3d3c496f gnome-mag-0.10.3.ebuild 842
-MD5 113492ae74efde275664220048f8355b ChangeLog 1625
+MD5 02394c339218628aea2eedff0ddcdfc4 ChangeLog 1726
 MD5 5253659a4a0e45baa9f1788dcb705895 metadata.xml 172
+MD5 d7e099f17ef686a9b6f7f7ea3d3c496f gnome-mag-0.10.3.ebuild 842
+MD5 470c98d3b638bb96d24cd9d3813a3ff2 gnome-mag-0.10.4.ebuild 733
+MD5 69b82fe524eefc2e2a50dcc8626a4d79 gnome-mag-0.10.6.ebuild 762
+MD5 9cdbe8658dd637c6b977dbdf0d370d3d gnome-mag-0.10.8.ebuild 782
+MD5 9cdbe8658dd637c6b977dbdf0d370d3d gnome-mag-0.10.9.ebuild 782
 MD5 fdaaee780264e27d2282f53bc3ca663c files/digest-gnome-mag-0.10.3 69
 MD5 dd17a4f017682f71040d7136f48265d6 files/digest-gnome-mag-0.10.4 69
 MD5 bd7c19d394dc054205cd1a37f7d6a2ce files/digest-gnome-mag-0.10.6 69
 MD5 587da1672707006d24f22a0e23568d24 files/digest-gnome-mag-0.10.8 69
+MD5 f9a3c3394519828846d76ec71a7f254a files/digest-gnome-mag-0.10.9 69
