@@ -1,0 +1,1 @@
+MD5 024d3ea58c6f8173e2f5cdde99c7e4fe gnome-mag-0.10.9.tar.bz2 289834
