@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-mag/gnome-mag-0.10.6.ebuild,v 1.3 2004/03/17 02:19:33 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-mag/gnome-mag-0.10.9.ebuild,v 1.1 2004/03/17 02:19:33 leonardop Exp $
 
 inherit gnome2
 
@@ -9,9 +9,9 @@ HOMEPAGE="http://www.gnome.org/"
 
 LICENSE="LGPL-2"
 SLOT="1"
-KEYWORDS="x86 ~sparc ~hppa ~alpha ~ia64 amd64 ~ppc"
+KEYWORDS="~x86 ~sparc ~hppa ~alpha ~ia64 ~amd64 ~ppc"
 
-IUSE="debug"
+IUSE=""
 
 RDEPEND=">=gnome-base/libbonobo-1.107
 	>=gnome-base/ORBit2-2.3.100
@@ -22,11 +22,9 @@ RDEPEND=">=gnome-base/libbonobo-1.107
 	virtual/x11"
 
 DEPEND="${RDEPEND}
-	dev-util/pkgconfig"
-
-G2CONF="${G2CONF} $(use_enable debug)"
+	dev-util/pkgconfig
+	dev-util/intltool"
 
 MAKEOPTS="${MAKEOPTS} -j1"
 
 DOCS="AUTHORS ChangeLog COPYING NEWS README"
-
