@@ -1,7 +1,15 @@
 # ChangeLog for gnome-extra/gnome-mag
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-mag/ChangeLog,v 1.13 2004/03/13 16:47:10 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-mag/ChangeLog,v 1.14 2004/03/17 02:19:33 leonardop Exp $
 
+*gnome-mag-0.10.9 (16 Mar 2004)
+
+  16 Mar 2004; L. Boshell <leonardop@gentoo.org> gnome-mag-0.10.9.ebuild:
+  New release.
+  
+  16 Mar 2004; L. Boshell <leonardop@gentoo.org> gnome-mag-0.10.6.ebuild:
+  Marked stable on x86.
+  
   13 Mar 2004; foser <foser@gentoo.org> metadata.xml :
   Maintainership to gnome-accessibility herd
 
